--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,13 +2,13 @@
 {% block title %}Dashboard{% endblock %}
 {% block content %}
 <h1 class="text-2xl font-bold mb-6">Dashboard</h1>
-<div class="grid grid-cols-6 gap-4 w-full">
-    <a href="/activities" class="block p-4 bg-white rounded shadow hover:bg-gray-100">Activiteiten beheren</a>
-    <a href="/vacancies" class="block p-4 bg-white rounded shadow hover:bg-gray-100">Vacatures beheren</a>
-    <a href="/supplies" class="block p-4 bg-white rounded shadow hover:bg-gray-100">Spullenvoorraad</a>
-    <a href="/knowledge" class="block p-4 bg-white rounded shadow hover:bg-gray-100">Kennisbank</a>
-    <a href="/contacts" class="block p-4 bg-white rounded shadow hover:bg-gray-100">Gemeentecontacten</a>
-    <a href="/organizations" class="block p-4 bg-white rounded shadow hover:bg-gray-100">Overige verenigingen</a>
+<div class="lg:grid lg:grid-cols-6 gap-4 w-full">
+    <a href="/activities" class="block p-4 bg-white rounded shadow hover:bg-gray-100 mb-2 lg:mb-0 ">Activiteiten beheren</a>
+    <a href="/vacancies" class="block p-4 bg-white rounded shadow hover:bg-gray-100 mb-2 lg:mb-0 ">Vacatures beheren</a>
+    <a href="/supplies" class="block p-4 bg-white rounded shadow hover:bg-gray-100 mb-2 lg:mb-0 ">Spullenvoorraad</a>
+    <a href="/knowledge" class="block p-4 bg-white rounded shadow hover:bg-gray-100 mb-2 lg:mb-0 ">Kennisbank</a>
+    <a href="/contacts" class="block p-4 bg-white rounded shadow hover:bg-gray-100 mb-2 lg:mb-0 ">Gemeentecontacten</a>
+    <a href="/organizations" class="block p-4 bg-white rounded shadow hover:bg-gray-100 mb-2 lg:mb-0 ">Overige verenigingen</a>
 </div>
 
 <div class="grid grid-cols-2 mt-8">
