--- a/templates/public.html
+++ b/templates/public.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 {% block title %}Home - Doen in Warnsveld{% endblock %}
 {% block content %}
+<div class="hero w-full flex items-center mb-6 h-10" style="background-image: url('https://www.dorpsraadwarnsveld.nl/wp-content/uploads/2021/05/DSC_0010-e1620637905108.jpg');"></div>
 <div class="lg:w-2/3 p-4">
-    <h1 class="text-2xl font-bold mb-6">Welkom op het plaform Doen in Warnsveld</h1>
+    <h1 class="text-2xl font-bold mb-6">Welkom op het platform Doen in Warnsveld</h1>
     <p class="mb-4">Dit platform is bedoeld voor de verenigingen in Warnsveld om elkaar te ondersteunen en samen te
         werken.</p>
     <p class="mb-4">Gebruik de navigatie om toegang te krijgen tot verschillende secties zoals activiteiten, vacatures,
         en meer.</p>
-    <a href="/dashboard" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Ga naar
-        Dashboard</a>
+    <!-- <a href="/dashboard" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Ga naar
+        Dashboard</a> -->
 </div>
 <div class="lg:grid lg:grid-cols-2 gap-4">
     <div class="m-4">
