--- a/templates/activities.html
+++ b/templates/activities.html
@@ -14,9 +14,9 @@
     {% for item in activities %}
     <li class="bg-white p-4 rounded shadow">
         <h2 class="text-xl font-semibold">{{ item[1] }}</h2>
+        <p class="text-sm text-blue-600 mt-2 mb-2">Datum: {{ item[2] | datetimeformat }}</p>
         <p class="text-gray-600 text-sm">Door: {{ item[4] }}</p>
         <p class="text-gray-800">{{ item[1] }}</p>
-        <p class="text-sm text-blue-600 mt-2">Datum: {{ item[2] }}</p>
         {% if item[5] %}
         <a href="{{ item[5] }}" target="_blank"
             class="inline-block mt-2 bg-blue-500 hover:bg-blue-600 text-white text-sm px-4 py-2 rounded">
