--- a/templates/public.html
+++ b/templates/public.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
 {% block title %}Home - Doen in Warnsveld{% endblock %}
 {% block content %}
-<div class="hero w-full flex items-center mb-6 h-10" style="background-image: url('https://www.dorpsraadwarnsveld.nl/wp-content/uploads/2021/05/DSC_0010-e1620637905108.jpg');"></div>
+<div class="hero w-full flex items-center mb-6 h-10" style="background-image: url('{{url_for("static", filename="heroimage.jpeg")}}');"></div>
 <div class="lg:w-2/3 p-4">
-    <h1 class="text-2xl font-bold mb-6">Welkom op het platform Doen in Warnsveld</h1>
-    <p class="mb-4">Dit platform is bedoeld voor de verenigingen in Warnsveld om elkaar te ondersteunen en samen te
-        werken.</p>
-    <p class="mb-4">Gebruik de navigatie om toegang te krijgen tot verschillende secties zoals activiteiten, vacatures,
-        en meer.</p>
+    <h1 class="text-2xl font-bold mb-6">Dé agenda van Warsnveld</h1>
+    <p class="mb-4">  
+Wil je een avondje uit of zoek je een zinvolle besteding van je vrije tijd? 
+    </br>
+Dit is dé site om te kijken wat er te doen is in Warnsveld. 
+</br>
+In de agenda vind je wanneer, wat en waar er iets te doen is. 
+</br>
+Via de knop “meer informatie” kom je op de website van degene die de activiteit organiseert. 
+</br>
+Zie je bij de vrijwilligersvacatures een interessante functie staan, neem dan via de knop “meer informatie” contact op. 
+</p>
     <!-- <a href="/dashboard" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Ga naar
         Dashboard</a> -->
 </div>
@@ -18,9 +25,9 @@
             {% for item in upcoming %}
             <li class="bg-white p-4 rounded shadow">
                 <h2 class="text-xl font-semibold">{{ item[0] }}</h2>
+                <p class="text-sm text-blue-600 mt-2 mb-2">Datum: {{ item[2] | datetimeformat }}</p>
                 <p class="text-gray-600 text-sm">Door: {{ item[3] }}</p>
                 <p class="text-gray-800">{{ item[1] }}</p>
-                <p class="text-sm text-blue-600 mt-2">Datum: {{ item[2] }}</p>
                 {% if item[4] %}
                 <a href="{{ item[4] }}" target="_blank" class="inline-block mt-2 bg-blue-500 hover:bg-blue-600 text-white text-sm px-4 py-2 rounded">
                     Meer informatie
