--- a/templates/public.html
+++ b/templates/public.html
@@ -13,7 +13,7 @@ In de agenda vind je wanneer, wat en waar er iets te doen is.
 </br>
 Via de knop “meer informatie” kom je op de website van degene die de activiteit organiseert. 
 </br>
-Zie je bij de vrijwilligersvacatures een interessante functie staan, neem dan via de knop “meer informatie” contact op. 
+<!-- Zie je bij de vrijwilligersvacatures een interessante functie staan, neem dan via de knop “meer informatie” contact op.  -->
 </p>
     <!-- <a href="/dashboard" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Ga naar
         Dashboard</a> -->
