--- a/templates/supplies.html
+++ b/templates/supplies.html
@@ -18,6 +18,9 @@
         </form>
     </div>
     {% endif %}
+    <a href="mailto:{{ item[4] }}" class="text-sm text-blue-600 hover:underline mt-2 inline-block">
+        Contact opnemen met aanbieder
+    </a>
 </div>
 {% endfor %}
 {% endblock %}
