--- a/templates/supplies.html
+++ b/templates/supplies.html
@@ -18,7 +18,7 @@
         </form>
     </div>
     {% endif %}
-    <a href="mailto:{{ item[4] }}" class="text-sm text-blue-600 hover:underline mt-2 inline-block">
+    <a href="mailto:{{ s[4] }}" class="text-sm text-blue-600 hover:underline mt-2 inline-block">
         Contact opnemen met aanbieder
     </a>
 </div>
