--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,15 @@
             min-height: calc(100vh - 128px);
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWK0QTBDYR"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-BWK0QTBDYR');
+    </script>
 </head>
 <body class="bg-gray-50 text-gray-800">
     <nav class="bg-thema shadow p-4 flex justify-between">
