--- a/templates/public.html
+++ b/templates/public.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="hero w-full flex items-center mb-6 h-10" style="background-image: url('{{url_for("static", filename="heroimage.jpeg")}}');"></div>
 <div class="lg:w-2/3 p-4">
-    <h1 class="text-2xl font-bold mb-6">Dé agenda van Warsnveld</h1>
+    <h1 class="text-2xl font-bold mb-6">Dé agenda van Warnsveld</h1>
     <p class="mb-4">  
 Wil je een avondje uit of zoek je een zinvolle besteding van je vrije tijd? 
     </br>
