--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,6 @@
         {% block content %}{% endblock %}
         
     </main>
-    <div class="bg-thema shadow p-4 flex justify-between"><p class="text-white text-sm">Copyright © 2025 Doen in Warnsveld</p></div>
+    <div class="bg-thema shadow p-4 flex justify-between"><p class="text-white text-sm">Copyright © 2025 Doen in Warnsveld - een initiatief van Dorpsraad Warnsveld</p></div>
 </body>
 </html>
